--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -123,7 +123,6 @@ if(location.host.indexOf('.local') > -1){
                         />
                         <path id="path4678" d="m316.56373,34.98q0,4.56 -3.3,7.32q-3.3,2.7 -8.46,2.7q-3.48,0 -7.26,-1.26q-3.72,-1.26 -6.6,-3.54l3.24,-5.22q5.58,4.2 10.8,4.2q2.28,0 3.6,-1.02q1.32,-1.08 1.32,-2.7q0,-2.4 -6.36,-4.32q-0.48,-0.18 -0.72,-0.24q-9.96,-2.7 -9.96,-9q0,-4.44 3.42,-7.08q3.48,-2.7 9,-2.7q5.52,0 10.44,3.24l-2.52,4.98q-3.9,-2.58 -8.46,-2.58q-2.4,0 -3.9,0.9q-1.5,0.84 -1.5,2.58q0,1.56 1.56,2.28q1.08,0.54 3,1.02q1.98,0.48 3.48,0.96c0.96,0.36 1.92,0.72 2.88,1.08q1.44,0.6 3.06,1.68q3.24,2.16 3.24,6.72z"
                         />
-                        <!-- <text font-size="17px" y="73" x="0" textLength="317" lengthAdjust="spacing">charity &amp; voluntary sector recruitment</text> -->
                       </g>
                     </g>
                   </svg>
@@ -149,86 +148,6 @@ if(location.host.indexOf('.local') > -1){
                 </a>
                 {{/each ~}}
               </nav>
-              <!-- <div class="mdc-menu-anchor">
-                <button class="mdc-button" data-menu-target="#roles-menu">
-                  Roles
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="roles-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?roles={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                  </div>
-                </div>
-              </div>
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button" data-menu-target="#sectors-menu">
-                  Sectors
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="sectors-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?sectors={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                  </div>
-                </div>
-              </div>
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button" data-menu-target="#statuses-menu">
-                  Types
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="statuses-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?statuses={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#compare key "===" "management-board" ~}}
-                        Trustee
-                        {{else}}
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                        {{/compare ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                    {{#compare data.supplimentaryResponses.home_based.hits.total ">" 0 ~}}
-                    <a class="mdc-list-item" href="/search?type=home-based" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        Home-based
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{data.supplimentaryResponses.home_based.hits.total}}
-                      </span>
-                    </a>
-                    {{/compare ~}}
-                  </div>
-                </div>
-              </div> -->
               <nav class="mdc-tab-bar mdc-tab-bar__left" id="main-extra-tab-bar">
                 {{#each context.metaData.menus.main-extra ~}}
                 <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{stripTrailingSlash path}}">
@@ -236,34 +155,13 @@ if(location.host.indexOf('.local') > -1){
                 </a>
                 {{/each ~}}
               </nav>
-              <!-- <div class="mdc-menu-anchor hide-md hide-sm">
-                <button class="mdc-top-app-bar__action-item" data-menu-target="#upper-menu">
-                  <i class="far fa-fw fa-ellipsis-h"></i>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="upper-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each context.metaData.menus.main-extra ~}}
-                    <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
-                      {{#if icon ~}}
-                      <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
-                      {{/if ~}}
-                      {{{label}}}
-                    </a>
-                    {{/each ~}}
-                  </div>
-                </div>
-              </div> -->
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__user">
+              {{#if data.auth.email}}
               <div class="mdc-menu-anchor">
-                <!-- Logged in: -->
                 <button class="mdc-button" data-menu-target="#user-menu">
                   <span class="far fa-fw fa-user-circle"></span>
-                  {{#if data.auth.email}}
-                    {{data.auth.email}}
-                  {{else}}
-                    Not logged in
-                  {{/if}}
+                  {{data.auth.email}}
                   <span class="far fa-fw fa-angle-down"></span>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
@@ -290,6 +188,15 @@ if(location.host.indexOf('.local') > -1){
                   </div>
                 </div>
               </div>
+              {{else}}
+              <nav class="mdc-tab-bar mdc-tab-bar__left" id="main-extra-tab-bar">
+                {{#each context.metaData.menus.unauthenticated ~}}
+                <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{stripTrailingSlash path}}">
+                  <span class="mdc-tab--label">{{{label}}}</span>
+                </a>
+                {{/each ~}}
+              </nav>
+              {{/if}}
             </section>
           </div>
         </div>
