--- a/sites/configurations/goodmoves/templates/account/sign-out.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-out.hbs
@@ -1,8 +1,8 @@
-  <form id="logout-form" method="POST" class="logout-form">
-    <div class="mdc-card">
-      <div class="mdc-card__info--vacancy">
-        <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
-          Logging out&hellip;
+  <form id="sign-out-form" method="POST" class="sign-in-form sign-out-form">
+    <div class="mdc-card mdc-elevation--z0">
+      <div class="card-loader" id="sign-out-loader">
+        <div class="card-loader-inner">
+          <span class="far fa-2x fa-circle-notch fa-spin"></span>
         </div>
       </div>
     </div>
@@ -11,7 +11,7 @@
     document.addEventListener("DOMContentLoaded", function(event) {
       window.setTimeout(function() {
         goodmoves.app.auth().signOut().then(function() {
-          window.location.href = '/';
+          // window.location.href = '/';
           goodmoves.setCookie('gm_token');
           goodmoves.setCookie('gm_cookie');
         }).catch(function(err) {
