--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -157,46 +157,35 @@ if(location.host.indexOf('.local') > -1){
               </nav>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__user">
-              {{#if data.auth.email}}
+              {{#if data.auth ~}}
               <div class="mdc-menu-anchor">
                 <button class="mdc-button" data-menu-target="#user-menu">
                   <span class="far fa-fw fa-user-circle"></span>
-                  {{data.auth.email}}
+                  {{{data.auth.email}}}
                   <span class="far fa-fw fa-angle-down"></span>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#if data.auth.email}}
-                      {{#each context.metaData.menus.user ~}}
-                      <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
-                        {{#if icon ~}}
-                        <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
-                        {{/if ~}}
-                        {{{label}}}
-                      </a>
-                      {{/each ~}}
-                    {{else}}
-                      {{#each context.metaData.menus.unauthenticated ~}}
-                      <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
-                        {{#if icon ~}}
-                        <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
-                        {{/if ~}}
-                        {{{label}}}
-                      </a>
-                      {{/each ~}}
-                    {{/if}}
+                    {{#each context.metaData.menus.user ~}}
+                    <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
+                      {{#if icon ~}}
+                      <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+                      {{/if ~}}
+                      {{{label}}}
+                    </a>
+                    {{/each ~}}
                   </div>
                 </div>
               </div>
               {{else}}
-              <nav class="mdc-tab-bar mdc-tab-bar__left" id="main-extra-tab-bar">
+              <nav class="mdc-tab-bar mdc-tab-bar__right" id="unauthenticated-tab-bar">
                 {{#each context.metaData.menus.unauthenticated ~}}
                 <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{stripTrailingSlash path}}">
                   <span class="mdc-tab--label">{{{label}}}</span>
                 </a>
                 {{/each ~}}
               </nav>
-              {{/if}}
+              {{/if ~}}
             </section>
           </div>
         </div>
