--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -111,7 +111,7 @@
       {{#each (split "roles,sectors,statuses" ",")}}
         <h3 class="mdc-drawer__content-heading cursor-pointer" data-collapse-target="#{{../instance_id}}-{{this}}-collapse"
                 role="button" aria-pressed="false"
-                aria-label="Show roles" tabindex="0">
+                aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
           {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
           <span class="mdc-icon-toggle pull-right" >
             <i class="far {{#if (getProperty ../request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
