--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -49,15 +49,14 @@
   {{~/if}}
   {{~#if location~}} in {{location}} {{/if~}}
   {{~#if salary_min~}}
-    {{~#if salary_max}} between £{{addCommas salary_min}} and {{addCommas salary_max}}
-    {{~else}} over £{{addCommas salary_min}}
+    {{~#if salary_max}} between {{salary_currency}}{{addCommas salary_min}} and {{salary_currency}}{{addCommas salary_max}}
+    {{~else}} over {{salary_currency}}{{addCommas salary_min}}
     {{~/if~}}
   {{~else~}}
-    {{~#if salary_max}} up to £{{addCommas salary_max}}
+    {{~#if salary_max}} up to {{salary_currency}}{{addCommas salary_max}}
     {{~/if}}
   {{~/if~}}
-{{~/with~}}
-        ">
+{{~/with~}}">
         <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
         <div class="mdc-line-ripple"></div>
       </div>
@@ -83,6 +82,7 @@
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      {{#if data.auth ~}}
       {{#with (querystringify (obj)
               keywords=@root.request.params.query.keywords
               salary_min=@root.request.params.query.salary_min
@@ -94,16 +94,17 @@
               lat=@root.request.params.query.lat
               lng=@root.request.params.query.lng
               location=@root.request.params.query.location
-            )}}
+            )
+          ~}}
         <script>
           document.addEventListener('DOMContentLoaded', function() {
             console.log('Current Query String:', {{{stringify this}}});
             console.log('Saved Search Query Strings:', {{{stringify (map @root.data.saved_searches.items (getProp 'querystring'))}}});
           });
         </script>
-        {{#with (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this))}}
+        {{#with (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this)) ~}}
           <span class="mdc-typography--headline5">{{name}}</span>
-          {{#> ajax_chip 
+          {{#> ajax_chip
             onUrl="/toggle-subscription"
             offUrl="/toggle-subscription"
             onText="Added to email"
@@ -111,8 +112,7 @@
             onMethod="POST"
             offMethod="POST"
             iconClasses="far fa-envelope"
-            on=subscribed
-          }}
+            on=subscribed}}
           {
             "onData": {
               "name": {{{stringify ../name}}}
@@ -128,8 +128,14 @@
             <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
             Save/email this search
           </button>
-        {{/with}}
-      {{/with}}
+        {{/with ~}}
+      {{/with ~}}
+      {{else}}
+      <a href="/sign-up" class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button">
+        <span class="far fa-sign-in-alt mdc-list-item__graphic" aria-hidden="true"></span>
+        Sign up for email alerts
+      </a>
+      {{/if ~}}
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{> pagination paging=data.search_data.detailed_results.pagination}}
