--- a/sites/configurations/goodmoves/templates/account/sign-out.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-out.hbs
@@ -11,9 +11,9 @@
     document.addEventListener("DOMContentLoaded", function(event) {
       window.setTimeout(function() {
         goodmoves.app.auth().signOut().then(function() {
-          // window.location.href = '/';
           goodmoves.setCookie('gm_token');
           goodmoves.setCookie('gm_cookie');
+          window.location.href = '/';
         }).catch(function(err) {
           console.error('Error logging out:', err);
         });
