More styling tweaks

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -434,10 +434,13 @@ footer h3,
   background-color: $mdc-theme-secondary-light;
   opacity: 0.7;
   display: none;
-  align-items: center;
-  justify-content: center;
   .card-loader-inner {
     color: $mdc-theme-primary-dark;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -1217,7 +1220,7 @@ body.shortlist {
 /*=====End Maps=====*/
 /*=====Top Bar=====*/
 #top-bar {
-  z-index: 100;
+  z-index: 100 !important;
 }
 .top-bar-stuck {
   position: fixed;
