--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -106,10 +106,10 @@
         </div>
         {{/each ~}}
         <div class="scroll-button scroll-left">
-          <span class="fas fa-chevron-circle-left fa-3x"></span>
+          <span class="fal fa-chevron-circle-left fa-3x"></span>
         </div>
         <div class="scroll-button scroll-right">
-          <span class="fas fa-chevron-circle-right fa-3x"></span>
+          <span class="fal fa-chevron-circle-right fa-3x"></span>
         </div>
         {{else}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
@@ -126,9 +126,21 @@
   <div class="mdc-layout-grid home-heading">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        {{#if data.auth ~}}
+        <div class="mdc-typography--headline5">
+          Your latest jobs
+          <span class="mdc-typography--body1">
+            <a href="/searches">Your searches</a>
+          </span>
+        </div>
+        {{else}}
         <div class="mdc-typography--headline5">
           Latest jobs
+          <span class="mdc-typography--body1">
+            <a href="/search?sort=newest&page=2">Find more</a>
+          </span>
         </div>
+        {{/if ~}}
       </div>
     </div>
   </div>
@@ -139,11 +151,20 @@
         {{> vacancy_mini _source}}
       </div>
       {{/each ~}}
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
+        <div class="align-centre">
+          {{#if data.auth ~}}
+          <a href="/search?sort=newest">All latest jobs</a>
+          {{else}}
+          <a href="/search?sort=newest&page=2">Find more jobs</a>
+          {{/if ~}}
+        </div>
+      </div>
       <div class="scroll-button scroll-left">
-        <span class="fas fa-chevron-circle-left fa-3x"></span>
+        <span class="fal fa-chevron-circle-left fa-3x"></span>
       </div>
       <div class="scroll-button scroll-right">
-        <span class="fas fa-chevron-circle-right fa-3x"></span>
+        <span class="fal fa-chevron-circle-right fa-3x"></span>
       </div>
     </div>
   </div>
@@ -155,6 +176,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <div class="mdc-typography--headline5">
           Top jobs
+          <span class="mdc-typography--body1">
+            <a href="/search">Find more</a>
+          </span>
         </div>
       </div>
     </div>
@@ -166,11 +190,16 @@
         {{> vacancy_mini _source}}
       </div>
       {{/each ~}}
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
+        <div class="align-centre">
+          <a href="/search">Find more jobs</a>
+        </div>
+      </div>
       <div class="scroll-button scroll-left">
-        <span class="fas fa-chevron-circle-left fa-3x"></span>
+        <span class="fal fa-chevron-circle-left fa-3x"></span>
       </div>
       <div class="scroll-button scroll-right">
-        <span class="fas fa-chevron-circle-right fa-3x"></span>
+        <span class="fal fa-chevron-circle-right fa-3x"></span>
       </div>
     </div>
   </div>
