--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2056,7 +2056,7 @@ form.inline-form {
   }
   .mdc-card.align-centre {
     box-shadow: none;
-    width: 18vw;
+    width: 18vw !important;
   }
   .mdc-layout-grid__cell {
     flex: 0 0 auto;
