--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid home-banner">
-  <div class="banner-search overlay" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2017/11/Teapot-Trust-09.jpg');">
+  <div class="banner-search overlay" style="background-image: url('https://cms.scvo.org/wp-content/uploads/2017/11/Teapot-Trust-09.jpg');">
     <div class="content page-content">
       <div class="overlay-content">
         <div class="mdc-layout-grid">
@@ -152,7 +152,7 @@
       </div>
       {{/each ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
-        <div class="align-centre">
+        <div class="mdc-card align-centre">
           {{#if data.auth ~}}
           <a href="/search?sort=newest">All latest jobs</a>
           {{else}}
@@ -191,7 +191,7 @@
       </div>
       {{/each ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs">
-        <div class="align-centre">
+        <div class="mdc-card align-centre">
           <a href="/search">Find more jobs</a>
         </div>
       </div>
