--- a/sites/configurations/goodmoves/templates/account/sign-out.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-out.hbs
@@ -7,7 +7,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
       goodmoves.setCookie('gm_cookie');
       window.location.href = '/';
     }).catch(function(err) {
-      console.error('Error logging out:', err);
+      console.error('Error signing out:', err);
     });
   }, 1000);
 });
