--- a/sites/configurations/scvo/layouts/default.hbs
+++ b/sites/configurations/scvo/layouts/default.hbs
@@ -125,9 +125,9 @@
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    <a class="mdc-list-item " href="/jobs/community-jobs-scotland/vacancies/logout" role="menuitem">
+                    <a class="mdc-list-item " href="/jobs/community-jobs-scotland/vacancies/sign-out" role="menuitem">
                       <span class="far fa-sign-out-alt mdc-list-item__graphic" aria-hidden="true"></span>
-                      Logout
+                      Sign out
                     </a>
                   </div>
                 </div>
