--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -15,7 +15,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
           {{#if data.auth ~}}
           {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-          <h3>Contact Details</h3>
+          <h3 class="no-margin">Contact Details</h3>
           <ul class="fa-ul">
             {{#if supervisor.first_name ~}}
             <li>
@@ -126,7 +126,7 @@
             If you work for SDS or JCP please <a href="http://jobs.scvo.org.uk/Account/Login">log in here</a> to start the referral/application process.
           </p> -->
           <p>
-            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/login?vacancy={{replace (replace request.url.path "/jobs/community-jobs-scotland/vacancies/" "") "/" "_"}}">log in here</a> to start the referral/application process.
+            If you work for SDS or JCP please <a href="/jobs/community-jobs-scotland/vacancies/sign-in?vacancy={{replace (replace request.url.path "/jobs/community-jobs-scotland/vacancies/" "") "/" "_"}}">log in here</a> to start the referral/application process.
           </p>
           {{/if ~}}
           <hr />
