--- a/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-job-apply.hbs
@@ -15,7 +15,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
           {{#if data.auth ~}}
           {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-          <h3 class="no-margin">Contact Details</h3>
+          <h3>Contact Details</h3>
           <ul class="fa-ul">
             {{#if supervisor.first_name ~}}
             <li>
@@ -81,16 +81,16 @@
             <li class="mdc-list-item">
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
-                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/JCP%20CJS%20Eligibility%20Referral%20v8.doc" target="_blank">
-                  <span class="title">JCP CJS Eligibility Referral Form</span>
+                <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/JCP%20CJS%20Eligibility%20Referral%20v8.2.doc" target="_blank">
+                  <span class="title">JCP CJS Eligibility Referral</span>
                 </a>
               </span>
             </li>
             <li class="mdc-list-item">
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
-                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/JCP%20CJS%20Application%20v8.doc" target="_blank">
-                  <span class="title">JCP CJS Application</span>
+                <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/CJS%20PT%20Dis%20Eligibility%20Referral%20Form%20v8.2.doc" target="_blank">
+                  <span class="title">CJS PT Dis Eligibility Referral Form</span>
                 </a>
               </span>
             </li>
@@ -105,7 +105,7 @@
             <li class="mdc-list-item">
               <span class="mdc-list-item__graphic far fa-file fa-file-word-o" aria-hidden="true"></span>
               <span class="mdc-list-item__text">
-                <a href="https://storage.googleapis.com/elasticsauce.appspot.com/cjs/SDS%20CJS%20Elig%20Ref%20Appl%20v8.doc" target="_blank">
+                <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/SDS%20CJS%20Elig%20Ref%20Appl%20v8.2.doc" target="_blank">
                   <span class="title">SDS CJS Eligibility Referral Application</span>
                 </a>
               </span>
