--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -1,11 +1,11 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
-<div id="detailed-results-container" class="container-content goodmoves-saved-searches">
+<div id="detailed-results-container" class="container-content goodmoves-settings">
   <h1 class="mdc-typography--headline3 v-margin-full">
     Settings
   </h1>
 
-  <h2 class="mdc-typography--headline4 v-margin">
+  <!-- <h2 class="mdc-typography--headline4 v-margin">
     Email alerts
   </h2>
   <p class="mdc-typography--body1">
@@ -31,26 +31,47 @@
     <button class="mdc-button mdc-button--raised mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="email-preferences-submit" data-mdc-auto-init="MDCRipple" disabled>Update preferences</button>
   </form>
 
-  <hr />
+  <hr /> -->
 
-  <h2 class="mdc-typography--headline4 v-margin">
-    Password
+  <h2 class="mdc-typography--headline4 v-margin-full">
+    Change/set password (TODO)
   </h2>
-  <p class="mdc-typography--body1">
-    TBC
-  </p>
+  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+    <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+    <input type="password" id="sign-in-password" class="mdc-text-field__input" data-lpignore="true" autocomplete="off" />
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-password">
+      Password
+    </label>
+    <div class="mdc-line-ripple"></div>
+  </div>
 
   <hr />
 
-  <h2 class="mdc-typography--headline4 v-margin">
+  <h2 class="mdc-typography--headline4 v-margin-full">
     Account
   </h2>
-  <p class="mdc-typography--body1">
-    <button class="mdc-button mdc-button--raised" data-dialog-target="#delete-user-dialog">
-      <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
-      Delete my account
-    </button>
-  </p>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <button class="mdc-button mdc-button--raised mdc-button--export" data-dialog-target="#export-user-dialog">
+          <span class="far fa-upload mdc-list-item__graphic" aria-hidden="true"></span>
+          Export account settings
+        </button>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <button class="mdc-button mdc-button--raised mdc-button--import" data-dialog-target="#import-user-dialog">
+          <span class="far fa-download mdc-list-item__graphic" aria-hidden="true"></span>
+          Import account settings
+        </button>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <button class="mdc-button mdc-button--raised mdc-button--delete" data-dialog-target="#delete-user-dialog">
+          <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
+          Delete account
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <aside id="delete-user-dialog"
