--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -27,7 +27,7 @@
         </div>
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth">
+          <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
           <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-email">
             Email
           </label>
@@ -36,7 +36,7 @@
 
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth">
+          <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
           <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-password">
             Password
           </label>
