--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -2,10 +2,29 @@
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   <div class="pull-right">
-    <a href="/settings" class="mdc-button mdc-button--raised v-margin-full">
-      <span class="far fa-cog mdc-list-item__graphic" aria-hidden="true"></span>
-      Email alert settings
-    </a>
+    <p class="mdc-typography--body1 v-margin-full">
+      <strong>Send email alerts</strong>
+    </p>
+    <div class="mdc-form-field">
+      <div class="mdc-radio">
+        <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" checked>
+        <div class="mdc-radio__background">
+          <div class="mdc-radio__outer-circle"></div>
+          <div class="mdc-radio__inner-circle"></div>
+        </div>
+      </div>
+      <label for="daily">Daily</label>
+    </div>
+    <div class="mdc-form-field">
+      <div class="mdc-radio">
+        <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" checked>
+        <div class="mdc-radio__background">
+          <div class="mdc-radio__outer-circle"></div>
+          <div class="mdc-radio__inner-circle"></div>
+        </div>
+      </div>
+      <label for="weekly">Weekly</label>
+    </div>
   </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
     Searches
