--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,9 +1,9 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
-  <div class="pull-right">
-    <p class="mdc-typography--body1 v-margin-full">
-      <strong>Send email alerts</strong>
+  <div class="settings">
+    <p class="mdc-typography--body1">
+      <strong>Email frequency</strong>
     </p>
     <div class="mdc-form-field">
       <div class="mdc-radio">
